# Wifly

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  CHECKLIST.md  Cargo.toml  DAEMON_IPC_READY_FOR_SAKSHAM.md  DOCUMENTATION_INDEX.md  FINAL_DELIVERY_SUMMARY.md  GITHUB_REPO_READY.md  GIT_WORKFLOW.md  INSTALL.md  KERNEL_INTEGRATION_GUIDE.md  M0_SETUP_STATUS.md  M1_IMPLEMENTATION_TODO.md  M1_QUICK_REFERENCE.md  M1_READY_FOR_SAKSHAM.md  M1_WFP_PACKET_EXTRACTION.md  M5_PHASE_1_COMPLETE.md  M5_PHASE_2_COMPLETE.md  MILESTONE_2_COMPLETE.md  MILESTONE_2_IMPLEMENTATION_SUMMARY.md  MILESTONE_2_QUICK_REFERENCE.md  MILESTONE_2_START.md  MILESTONE_3_COMPLETE.md  MILESTONE_3_IMPLEMENTATION.md  MILESTONE_3_PLAN.md  MILESTONE_3_QUICK_START.md  MILESTONE_3_START.md  MILESTONE_5_PLAN.md  PHASE_5_SECURITY_REVIEW.md  PUBLISHING_GUIDE.md  PUBLISHING_SETUP_COMPLETE.md  QUICKSTART.md  QUICK_PUBLISH.md  QUICK_START.md  README.md  README_M0_SETUP.md  SAKSHAM_WORKFLOW.md  SETUP_COMPLETE.md  START_HERE.md  (+12 more)
.cargo/: config.toml
.github/workflows/: build-wfp.yml  release.yml  test-daemon.yml
crypto/: Cargo.toml
crypto/src/: cert.rs  device_enrollment.rs  handshake.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: bucket.rs  device_registry.rs  http.rs  ipc.rs  main.rs  pipe_server.rs  registry.rs  scheduler.rs  stats_listener.rs  token_bucket.rs  wfp_bridge.rs
daemon/tests/: integration_test.rs
docs/: ARCHITECTURE.md  GIT_WORKFLOW.md  SETUP_MAC.md  SETUP_WINDOWS.md  index.html
proto/: Cargo.toml
proto/src/: lib.rs
scripts/: setup_driver.ps1
src/: index.html
ui/: Cargo.toml  tauri.conf.json
ui/src/: lib.rs  main.rs
ui/src-tauri/: index.html  package-lock.json  package.json  vite.config.ts
ui/src-tauri/components/: DeviceCard.tsx  DeviceList.tsx  DeviceStatsDisplay.tsx  Header.tsx  ServerSettings.tsx  Sidebar.tsx
ui/src-tauri/src/: App.tsx  main.tsx
ui/src-tauri/styles/: App.css  ServerSettings.css
wfp-callout/: Cargo.toml  test_output.txt
wfp-callout/src/: callout.rs  engine.rs  lib.rs  packet_injector.rs  packet_tracker.rs  pipe.rs
