[workspace]
members = ["daemon", "wfp-callout", "crypto", "proto", "ui"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["Aksh", "Saksham"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
crossbeam-queue = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
