[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
authors = ["Aksh"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
rcgen = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
tracing = "0.1"
proto = { path = "../proto" }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
tempfile = "3.8"
