[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
authors = ["Aksh"]

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
bincode = { workspace = true }
thiserror = { workspace = true }
crossbeam-queue = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
proto = { path = "../proto" }
crypto = { path = "../crypto" }
axum = { version = "0.7", features = ["json", "macros", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.13"
base64 = "0.21"
local-ip-address = "0.4"
image = "0.24"
urlencoding = "2.1"
futures = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "winnt", "handleapi"] }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
tokio = { version = "1.36", features = ["net", "sync", "time", "rt"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
