[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["Saksham"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
bincode = { workspace = true }
thiserror = { workspace = true }
proto = { path = "../proto" }
tauri = { version = "2.5" }
tauri-build = "2.5"

[build-dependencies]
tauri-build = "2.5"
