[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["Saksham"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
bincode = { workspace = true }
thiserror = { workspace = true }
proto = { path = "../proto" }
tauri = { version = "2.10", features = ["default"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[[bin]]
name = "netshaper-ui"
path = "src/main.rs"
