[package]
name = "wfp-callout"
version = "0.1.0"
edition = "2021"
authors = ["Saksham"]

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
]}
thiserror = { workspace = true }
tracing = { workspace = true }
proto = { path = "../proto" }
bincode = "1.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
